# Sensorplatine_flash_tool

./: CMakeLists.txt  KalmanFilter1d.h  Makefile  README.md  StepperMotor.cpp  XCsoar_com_if.cpp  XCsoar_com_if.h  net_com.cpp  net_com.h  nmea_converter.c  nmea_converter.h  openvario_app.cpp  tftp_client.cpp  tftp_client.h  tftp_packet.cpp  tftp_packet.h
